# CommonAssessmentTool

./: .dockerignore  Dockerfile  README.md  deploy_key  deploy_key.pub  docker-compose.yml  initialize_data.py  initialize_models.py  pyproject.toml  start.sh
.github/workflows/: cd.yml  ci.yml
app/: database.py  main.py  models.py  requirements.txt
app/auth/: router.py
app/clients/: router.py  schema.py
app/clients/service/: client_service.py  logic.py  model.py  model_factory.py
app/clients/service/models/: gradient_boost.pkl
app/ml_models/: decision_tree_model.py  logistic_model.py  model_manager.py  random_forest_model.py  router.py
tests/: test_clients.py
