[tool.black]
line-length = 88
target-version = ['py39']

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CaseManagementAI"
version = "0.1.0"
description = "The project description"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "pylint",
    "black",
    "mypy",
    "flake8"
]