[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CaseManagementAI"
version = "0.1.0"
description = "As a developer, I want the backend Python code to be adhere to best practices according Clean CodeLinks to an external site. (e.g. Design Principles, Design Patterns, SOLID, etc) so that current and new developers can better read the codebase and easily make changes. "
readme = "README.md"

authors = [
    { name="Zhengpeng Qiu, Brian Yu, Brandon Yu, Siyu Yao"}
]

dependencies = [
    "aiofiles==23.2.1",
    "alembic==1.12.0",
    "annotated-types==0.6.0",
    "anyio==3.7.1",
    "argon2-cffi==21.3.0",
    "arrow==1.2.3",
    "attrs==22.1.0",
    "bcrypt==4.0.1",
    "beautifulsoup4==4.12.2",
    "certifi==2023.7.22",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cryptography==41.0.4",
    "ecdsa==0.18.0",
    "fastapi==0.103.2",
    "folium==0.14.0",
    "h11==0.14.0",
    "httpx==0.24.1",
    "idna==3.4",
    "Jinja2==3.1.2",
    "joblib==1.4.0",
    "jsonschema==4.17.3",
    "lxml==4.9.3",
    "Mako==1.2.4",
    "MarkupSafe==2.1.3",
    "numpy==1.24.2",
    "packaging==23.2",
    "pandas==2.0.0",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.9",
    "pyasn1==0.5.0",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "pydantic_core==2.10.1",
    "pylint==3.0.1",
    "pytest==7.2.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "pytz==2023.3",
    "requests==2.31.0",
    "rsa==4.9",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "six==1.16.0",
    "sniffio==1.3.0",
    "SQLAlchemy==2.0.21",
    "starlette==0.27.0",
    "threadpoolctl==3.4.0",
    "typing_extensions==4.8.0",
    "tzdata==2023.3",
    "urllib3==2.0.7",
    "uvicorn==0.23.2"
]

[project.optional-dependencies]
dev = [
    # Linting and Formatting
    "black==23.10.0",
    "pylint==3.0.1",
    "flake8==6.1.0",
    "mypy==1.6.1",

    # Testing
    "pytest==7.2.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.pylint.master]
disable = ["C0111", "C0103"]

[project.urls]
"Homepage" = "https://github.com/CaseManagementAI-5500/CommonAssessmentTool"